deploy/k8s/base/networkpolicy/allow-kafka-mysql-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-mysql-redis
  namespace: model-serving
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 6379
